--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <link src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.css" rel="stylesheet"/>
     <title></title>
   </head>
   <body ng-app="app">
