looks bad, kinda works

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.0.9/angular-material.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="./style/style.css" />
     <title></title>
   </head>
   <body ng-app="app">
+    <cust-nav></cust-nav>
     <main ng-view>
       Processing
     </main>
